--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -15,6 +15,8 @@ es:
         first_name: Nombre
         last_name: Apellido
       transaction:
+        sender_id: Envia
+        receiver_id: Recibe
         source_currency: "De"
         target_currency: "A"
         rate: Tasa
