feat: Agregar overlay para estados de carga

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,6 +2,7 @@ es:
   pundit:
     not_authorized: "No estás autorizado para hacer eso."
   madmin:
+    loading: Cargando...
     new: Crear
     view: Ver
     edit: Editar
