--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,6 @@
 es:
+  select_bank: Seleccione un banco
+  select_customer: Seleccione un cliente
   edit_bank_balances: Editar balance
   profit: Ganancia
   file_not_found: Archivo no encontrado
